--- a/package.json
+++ b/package.json
@@ -56,22 +56,22 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@enio.ai/typedoc": "^1.0.6",
     "@jscutlery/semver": "^2.29.0",
-    "@nrwl/cli": "15.4.2",
-    "@nrwl/cypress": "15.4.2",
-    "@nrwl/devkit": "15.4.2",
-    "@nrwl/eslint-plugin-nx": "15.4.2",
-    "@nrwl/jest": "15.4.2",
-    "@nrwl/js": "15.4.2",
-    "@nrwl/linter": "15.4.2",
-    "@nrwl/nest": "15.4.2",
-    "@nrwl/next": "15.4.2",
+    "@nrwl/cli": "15.5.3",
+    "@nrwl/cypress": "15.5.3",
+    "@nrwl/devkit": "15.5.3",
+    "@nrwl/eslint-plugin-nx": "15.5.3",
+    "@nrwl/jest": "15.5.3",
+    "@nrwl/js": "15.5.3",
+    "@nrwl/linter": "15.5.3",
+    "@nrwl/nest": "15.5.3",
+    "@nrwl/next": "15.5.3",
     "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/nx-plugin": "15.4.2",
-    "@nrwl/react": "15.4.2",
-    "@nrwl/react-native": "15.4.2",
-    "@nrwl/storybook": "15.4.2",
-    "@nrwl/web": "15.4.2",
-    "@nrwl/workspace": "15.4.2",
+    "@nrwl/nx-plugin": "15.5.3",
+    "@nrwl/react": "15.5.3",
+    "@nrwl/react-native": "15.5.3",
+    "@nrwl/storybook": "15.5.3",
+    "@nrwl/web": "15.5.3",
+    "@nrwl/workspace": "15.5.3",
     "@nxtend/firebase": "^12.1.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
@@ -97,7 +97,7 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "15.4.2",
+    "nx": "15.5.3",
     "nx-electron": "^13.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
@@ -109,8 +109,9 @@
     "typescript": "~4.7.2"
   },
   "overrides": {
-    "react": "18.2.0",
-    "@nrwl/workspace": "15.4.2"
+    "@nxtend/firebase": {
+      "@nrwl/workspace": "15.5.3"
+    }
   },
   "config": {
     "commitizen": {
@@ -131,3 +132,4 @@
     }
   ]
 }
+
