--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
   "overrides": {
     "@nxtend/firebase": {
       "@nrwl/workspace": "15.5.3"
-    }
+    },
+    "react": "18.2.0"
   },
   "config": {
     "commitizen": {
