--- a/packages/data-ferret/package.json
+++ b/packages/data-ferret/package.json
@@ -41,6 +41,14 @@
     "clone",
     "copy",
     "json",
-    "circular"
+    "circular",
+    "traverse",
+    "locate",
+    "transform",
+    "rename",
+    "replace",
+    "text-search",
+    "difference",
+    "diff"
   ]
 }
