refactor(badge-service): project renamed to 'badge-service'

--- a/apps/badge-service/package.json
+++ b/apps/badge-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enio.ai/@badge-service",
+  "name": "badge-service",
   "version": "0.1.0",
   "description": "A service to generate repository badges",
   "license": "MIT",
@@ -7,7 +7,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/enio-ireland/enio/tree/develop/apps/@badge-service"
+    "url": "https://github.com/enio-ireland/enio/tree/develop/apps/badge-service"
   },
   "main": "lib/index.js",
   "engines": {
