--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,7 +16,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@enio.ai/@badge-service": ["apps/@badge-service/src/index.ts"],
+      "badge-service": ["apps/badge-service/src/index.ts"],
       "@enio.ai/data-ferret": ["packages/data-ferret/src/index.ts"],
       "@enio.ai/nx-install": ["packages/nx-install/src/index.ts"],
       "@enio.ai/typedoc": ["packages/typedoc/src/index.ts"]
