--- a/apps/firebase/project.json
+++ b/apps/firebase/project.json
@@ -1,31 +1,36 @@
 {
-  "name": "badge-service",
+  "name": "firebase",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/badge-service/src",
+  "sourceRoot": "apps/firebase/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/badge-service",
-        "main": "apps/badge-service/src/index.ts",
-        "tsConfig": "apps/badge-service/tsconfig.lib.json",
-        "assets": ["apps/badge-service/*.md"]
+        "outputPath": "dist/apps/firebase",
+        "main": "apps/firebase/src/index.ts",
+        "tsConfig": "apps/firebase/tsconfig.lib.json",
+        "assets": [
+          "apps/firebase/database.rules.json",
+          "apps/firebase/firebase.json",
+          "apps/firebase/firebaserc.json",
+          "apps/firebase/storage.rules"
+        ]
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["apps/badge-service/**/*.ts"]
+        "lintFilePatterns": ["apps/firebase/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/badge-service/jest.config.ts",
+        "jestConfig": "apps/firebase/jest.config.ts",
         "passWithNoTests": false,
         "codeCoverage": true
       }
@@ -45,7 +50,7 @@
             "forwardAllArgs": true
           }
         ],
-        "cwd": "apps/badge-service",
+        "cwd": "apps/firebase",
         "parallel": false
       }
     }
