--- a/apps/firebase/package.json
+++ b/apps/firebase/package.json
@@ -4,12 +4,12 @@
   "description": "A service to generate repository badges",
   "license": "MIT",
   "author": "Enio Authors",
-  "type": "module",
+  "type": "commonjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/enio-ireland/enio/tree/develop/apps/firebase"
   },
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "engines": {
     "node": "16"
   },
@@ -39,7 +39,8 @@
   "dependencies": {
     "badge-maker": "^3.3.1",
     "firebase-admin": "^11.4.1",
-    "firebase-functions": "^4.1.1"
+    "firebase-functions": "^4.1.1",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "typescript": "^4.6.4"
