--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,10 +16,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "firebase": ["apps/firebase/src/index.ts"],
       "@enio.ai/data-ferret": ["packages/data-ferret/src/index.ts"],
       "@enio.ai/nx-install": ["packages/nx-install/src/index.ts"],
-      "@enio.ai/typedoc": ["packages/typedoc/src/index.ts"]
+      "@enio.ai/typedoc": ["packages/typedoc/src/index.ts"],
+      "firebase": ["apps/firebase/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
