--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
     "paths": {
       "@enio.ai/data-ferret": ["packages/data-ferret/src/index.ts"],
       "@enio.ai/nx-install": ["packages/nx-install/src/index.ts"],
+      "@enio.ai/path-schema": ["packages/path-schema/src/index.ts"],
       "@enio.ai/typedoc": ["packages/typedoc/src/index.ts"],
       "firebase": ["apps/firebase/src/index.ts"]
     }
