refactor(firebase): firebase :construction:

--- a/apps/firebase/tsconfig.json
+++ b/apps/firebase/tsconfig.json
@@ -8,7 +8,8 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "esModuleInterop": true
   },
   "files": [],
   "include": [],
