--- a/apps/firebase/package.json
+++ b/apps/firebase/package.json
@@ -37,6 +37,7 @@
     }
   ],
   "dependencies": {
+    "@enio.ai/path-schema": "^0.2.0",
     "badge-maker": "^3.3.1",
     "firebase-admin": "^11.4.1",
     "firebase-functions": "^4.1.1",
