--- a/.github/workflows/sync-projects.yml
+++ b/.github/workflows/sync-projects.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Run GitHub File Sync
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.ENIO_TO_ENTERPRISE_SYNC_PAT }}
