--- a/.github/workflows/sync-projects.yml
+++ b/.github/workflows/sync-projects.yml
@@ -20,3 +20,21 @@ jobs:
         uses: BetaHuhn/repo-file-sync-action@v1
         with:
           GH_PAT: ${{ secrets.ENIO_TO_ENTERPRISE_SYNC_PAT }}
+          CONFIG_PATH: .github/sync-projects-files.yml
+          REVIEWERS: |
+            AndrewRedican
+          TEAM_REVIEWERS: |
+            enterprise-contributors
+          COMMIT_BODY: "chore: sync latest changes from enio repository"
+          OVERWRITE_EXISTING_PR: true
+          COMMIT_PREFIX: ''
+          PR_BODY: ''
+          ORIGINAL_MESSAGE: false
+          COMMIT_AS_PR_TITLE: false
+          COMMIT_EACH_FILE: false
+          GIT_EMAIL: andrew.redican.mejia@gmail.com
+          GIT_USERNAME: AndrewRedican
+          BRANCH_PREFIX: sync
+          SKIP_CLEANUP: false
+          SKIP_PR: false
+          FORK: false
