ci: update sync-projects-files

--- a/.github/sync-projects-files.yml
+++ b/.github/sync-projects-files.yml
@@ -1,9 +1,20 @@
 enio-ireland/enterprise:
-  - source: /
+  - source: |
+      /.github/workflows
+      /.husky
+      /.vscode
+      /apps
+      /images
+      /packages
+      /tools
     replace: true
     exclude: |
       coverage
       dist
+      docs
       node_modules
       tmp
       LICENSE
+      sync-projects.yml
+      .all-contributorsrc
+
