--- a/packages/nx-clone/package.json
+++ b/packages/nx-clone/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@enio.ai/nx-clone",
   "version": "0.0.0",
-  "description": "Generator to setup command to install dependencies through npm for each project",
+  "description": "Generator to instantly replicate your favorite custom Nx projects.",
   "license": "MIT",
   "author": "Enio Authors",
   "repository": {
