docs(nx-clone): update keywords

--- a/packages/nx-clone/package.json
+++ b/packages/nx-clone/package.json
@@ -36,7 +36,10 @@
     "enio.ai",
     "monorepo",
     "dependencies",
-    "npm install",
-    "npm i"
+    "clone",
+    "project",
+    "template",
+    "repo",
+    "generator"
   ]
 }
