chore: update dependencies :arrow_up:

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "remove": "nx g rm",
     "clone": "nx g @enio.ai/nx-clone:exec",
     "update": "nx migrate latest",
+    "update:apply": "nx migrate --run-migrations",
     "reset": "nx reset",
     "commit": "cz"
   },
@@ -58,35 +59,35 @@
     "@enio.ai/nx-clone": "^0.1.0",
     "@enio.ai/typedoc": "^1.0.6",
     "@jscutlery/semver": "^2.29.0",
-    "@nrwl/cli": "15.5.3",
-    "@nrwl/cypress": "15.5.3",
-    "@nrwl/devkit": "15.5.3",
-    "@nrwl/eslint-plugin-nx": "15.5.3",
-    "@nrwl/jest": "15.5.3",
-    "@nrwl/js": "15.5.3",
-    "@nrwl/linter": "15.5.3",
-    "@nrwl/nest": "15.5.3",
-    "@nrwl/next": "15.5.3",
-    "@nrwl/nx-cloud": "15.0.2",
-    "@nrwl/nx-plugin": "15.5.3",
-    "@nrwl/react": "15.5.3",
-    "@nrwl/react-native": "15.5.3",
-    "@nrwl/storybook": "15.5.3",
-    "@nrwl/web": "15.5.3",
-    "@nrwl/workspace": "15.5.3",
+    "@nrwl/cli": "15.8.5",
+    "@nrwl/cypress": "15.8.5",
+    "@nrwl/devkit": "15.8.5",
+    "@nrwl/eslint-plugin-nx": "15.8.5",
+    "@nrwl/jest": "15.8.5",
+    "@nrwl/js": "15.8.5",
+    "@nrwl/linter": "15.8.5",
+    "@nrwl/nest": "15.8.5",
+    "@nrwl/next": "15.8.5",
+    "@nrwl/nx-cloud": "15.1.1",
+    "@nrwl/nx-plugin": "15.8.5",
+    "@nrwl/react": "15.8.5",
+    "@nrwl/react-native": "15.8.5",
+    "@nrwl/storybook": "15.8.5",
+    "@nrwl/web": "15.8.5",
+    "@nrwl/workspace": "15.8.5",
     "@nxtend/firebase": "^12.1.0",
     "@swc-node/register": "^1.4.2",
     "@swc/cli": "~0.1.55",
     "@swc/core": "^1.2.173",
     "@testing-library/react": "13.4.0",
-    "@types/jest": "28.1.1",
+    "@types/jest": "29.4.0",
     "@types/mocha": "^9.1.1",
-    "@types/node": "18.11.9",
+    "@types/node": "18.11.18",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
-    "babel-jest": "28.1.1",
+    "babel-jest": "29.4.3",
     "commitizen": "^4.2.5",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.15.0",
@@ -96,14 +97,14 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "^8.0.1",
-    "jest": "28.1.1",
-    "jest-environment-jsdom": "28.1.1",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "29.4.3",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "15.5.3",
+    "nx": "15.8.5",
     "nx-electron": "^13.2.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "typedoc": "^0.23.20",
     "typedoc-plugin-rename-defaults": "^0.6.4",
@@ -140,3 +141,4 @@
     }
   ]
 }
+
