--- a/package.json
+++ b/package.json
@@ -52,13 +52,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.5.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@enio.ai/nx-clone": "^0.1.0",
-    "@enio.ai/typedoc": "^1.0.6",
+    "@enio.ai/nx-clone": "^0.1.2",
+    "@enio.ai/nx-install": "^0.2.2",
+    "@enio.ai/typedoc": "^1.0.7",
     "@jscutlery/semver": "^2.29.0",
     "@nrwl/cli": "15.8.5",
     "@nrwl/cypress": "15.8.5",
@@ -107,16 +108,26 @@
     "react-test-renderer": "18.2.0",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "typedoc": "^0.23.20",
+    "typedoc": "^0.23.26",
     "typedoc-plugin-rename-defaults": "^0.6.4",
     "typedoc-theme-hierarchy": "^3.0.0",
     "typescript": "~4.7.2"
   },
   "overrides": {
     "nx-electron": {
-      "nx": "15.8.5",
       "@nrwl/devkit": "15.8.5",
-      "@nrwl/workspace": "15.8.5"
+      "@nrwl/workspace": "15.8.5",
+      "nx": "15.8.5",
+      "tslib": "^2.3.0"
+    },
+    "@enio.ai/nx-clone": {
+      "tslib": "^2.3.0"
+    },
+    "@enio.ai/nx-install": {
+      "tslib": "^2.3.0"
+    },
+    "@enio.ai/typedoc": {
+      "tslib": "^2.3.0"
     },
     "react": "18.2.0",
     "rxjs": "7.8.0"
