--- a/package.json
+++ b/package.json
@@ -57,8 +57,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@enio.ai/nx-clone": "^0.1.0",
-    "@enio.ai/typedoc": "^1.0.6",
+    "@enio.ai/nx-clone": "^0.1.3",
+    "@enio.ai/nx-install": "^0.2.3",
+    "@enio.ai/typedoc": "^1.0.8",
     "@jscutlery/semver": "^2.29.0",
     "@nrwl/cli": "15.8.5",
     "@nrwl/cypress": "15.8.5",
@@ -119,7 +120,8 @@
       "@nrwl/workspace": "15.8.5"
     },
     "react": "18.2.0",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.0",
+    "tslib": "^2.5.0"
   },
   "config": {
     "commitizen": {
