chore: reference nx bin

--- a/package.json
+++ b/package.json
@@ -8,41 +8,42 @@
     "url": "https://github.com/enio-ireland/enio"
   },
   "scripts": {
-    "create.app.electron": "nx g nx-electron:app",
-    "create.app.react-native": "nx g @nrwl/react-native:app",
-    "create.app.react": "nx g @nrwl/react:app",
-    "create.app.nest": "nx g @nrwl/nest:app",
-    "create.app.next": "nx g @nrwl/next:app",
-    "create.lib.ts": "nx g @nrwl/js:lib",
-    "create.lib.react-native": "nx g @nrwl/react-native:lib",
-    "create.lib.react": "nx g @nrwl/react:lib",
-    "create.lib.nest": "nx g @nrwl/nest:lib",
-    "create.lib.next": "nx g @nrwl/next:lib",
-    "create.docs": "nx typedoc",
-    "create.book": "nx g @nrwl/storybook:configuration",
-    "create.plugin": "nx g @nrwl/nx-plugin:plugin",
-    "setup.docs": "nx g @enio.ai/typedoc:config",
-    "serve.book": "nx storybook",
-    "build.book": "nx build-storybook",
-    "serve": "nx serve",
-    "format": "nx format:write",
-    "lint": "nx lint",
-    "test": "nx test",
-    "test:affected": "nx affected:test",
-    "e2e": "nx e2e",
-    "e2e:affected": "nx affected:e2e",
-    "nx-install": "nx nx-install",
-    "nx-install:affected": "nx affected --target=nx-install --all",
-    "build": "nx build",
-    "release": "nx version",
-    "publish": "nx publish --verbose",
-    "graph": "nx graph",
-    "remove": "nx g rm",
-    "clone": "nx g @enio.ai/nx-clone:exec",
-    "update": "nx migrate latest",
-    "update:apply": "nx migrate --run-migrations",
+    "nx": "node ./node_modules/@nrwl/cli/bin/nx.js",
+    "create.app.electron": "npm run nx -- g nx-electron:app",
+    "create.app.react-native": "npm run nx -- g @nrwl/react-native:app",
+    "create.app.react": "npm run nx -- g @nrwl/react:app",
+    "create.app.nest": "npm run nx -- g @nrwl/nest:app",
+    "create.app.next": "npm run nx -- g @nrwl/next:app",
+    "create.lib.ts": "npm run nx -- g @nrwl/js:lib",
+    "create.lib.react-native": "npm run nx -- g @nrwl/react-native:lib",
+    "create.lib.react": "npm run nx -- g @nrwl/react:lib",
+    "create.lib.nest": "npm run nx -- g @nrwl/nest:lib",
+    "create.lib.next": "npm run nx -- g @nrwl/next:lib",
+    "create.docs": "npm run nx -- typedoc",
+    "create.book": "npm run nx -- g @nrwl/storybook:configuration",
+    "create.plugin": "npm run nx -- g @nrwl/nx-plugin:plugin",
+    "setup.docs": "npm run nx -- g @enio.ai/typedoc:config",
+    "serve.book": "npm run nx -- storybook",
+    "build.book": "npm run nx -- build-storybook",
+    "serve": "npm run nx -- serve",
+    "format": "npm run nx -- format:write",
+    "lint": "npm run nx -- lint",
+    "test": "npm run nx -- test",
+    "test:affected": "npm run nx -- affected:test",
+    "e2e": "npm run nx -- e2e",
+    "e2e:affected": "npm run nx -- affected:e2e",
+    "nx-install": "npm run nx -- nx-install",
+    "nx-install:affected": "npm run nx -- affected --target=nx-install --all",
+    "build": "npm run nx -- build",
+    "release": "npm run nx -- version",
+    "publish": "npm run nx -- publish --verbose",
+    "graph": "npm run nx -- graph",
+    "remove": "npm run nx -- g rm",
+    "clone": "npm run nx -- g @enio.ai/nx-clone:exec",
+    "update": "npm run nx -- migrate latest",
+    "update:apply": "npm run nx -- migrate --run-migrations",
     "dependency:review": "npm-check-updates",
-    "reset": "nx reset",
+    "reset": "npm run nx -- reset",
     "commit": "cz",
     "prepare": "husky install"
   },
@@ -58,7 +59,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@enio.ai/nx-clone": "^0.1.3",
+    "@enio.ai/nx-clone": "^0.1.5",
     "@enio.ai/nx-install": "^0.2.3",
     "@enio.ai/typedoc": "^1.0.8",
     "@jscutlery/semver": "^2.29.0",
